--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
     "react": "^19.0.0",
