--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^6.12.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
