--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
