--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
-    "simplex-noise": "^4.0.3"
+    "simplex-noise": "^4.0.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
