--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "i18next": "^24.2.3",
+    "i18next-resources-to-backend": "^1.2.1",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-markdown": "^9.0.1",
     "simplex-noise": "^4.0.3",
     "uuid": "^11.1.0"
